[package]
name = "ca2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
nom-derive = "0.10.0"
pest = "2.1.3"
pest_derive = "2.1.0"
clap = { version = "3.0.9", features = ["derive"] }
serde = { version = "1.0.133", features = ["derive"] }
csv = "1.1"
bzip2 = "0.4.3"
